tools/sddl/assembler/tests/fail/stack_dup_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
stack.dup 42
halt
